# rays_c_graphics_engine

./: CMakeLists.txt  README.md  main.c
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: Doxyfile  doxygen.css  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__cameras.html  group__cameras.js  group__codes.html  group__codes.js  group__datatypes.html  group__datatypes.js  group__def__shaders.html  group__def__shaders.js  group__elements.html  group__elements.js  group__io.html  group__io.js  group__master.html  group__master.js  group__meshes.html  group__meshes.js  group__shaders.html  group__shaders.js  group__singlemesh.html  group__singlemesh.js  group__textures.html  group__textures.js  group__transforms.html  group__transforms.js  guide01.html  index.html  index.js  layout.xml  navtreedata.js  (+46 more)
docs/html/: 01.html  annotated.html  annotated_dup.js  classes.html  dir_0b566694cbc2f28d0dc07c22c6013def.html  dir_0b566694cbc2f28d0dc07c22c6013def.js  dir_645324f4fd7a1c40eed988de5f84154e.html  dir_645324f4fd7a1c40eed988de5f84154e.js  dir_ed125fa84592e18813ab2d0adfd69a3f.html  dir_ed125fa84592e18813ab2d0adfd69a3f.js  doxygen_crawl.html  files_dup.js  globals.html  globals_defs.html  globals_dup.js  globals_eval.html  globals_i.html  globals_m.html  globals_r.html  globals_s.html  globals_t.html  group__cameras.html  group__cameras.js  group__datatype.html  group__datatypes.js  group__elements.html  group__elements.js  group__init.html  group__init.js  group__meshes.js  group__shaders.html  group__shaders__attrib.html  group__shaders__comp.html  group__textures.html  group__textures.js  group__transforms.js  group__window.html  group__window.js  group__windows.html  group__windows.js  (+22 more)
docs/html/search/: all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  defines_0.js  enumvalues_2.js  enumvalues_3.js  functions_0.js  groups_1.js  groups_3.js  groups_4.js  groups_5.js  groups_9.js  pages_1.js  pages_10.js  pages_5.js  pages_7.js  pages_9.js  pages_e.js
docs/latex/: 01.tex  annotated.tex  files.tex  group__cameras.tex  group__datatype.tex  group__datatypes.tex  group__elements.tex  group__init.tex  group__io.tex  group__meshes.tex  group__shaders.tex  group__shaders__attrib.tex  group__shaders__comp.tex  group__textures.tex  group__transforms.tex  group__window.tex  group__windows.tex  guide01.tex  index.tex  rcge_8h.tex  rcge_8h_source.tex  rcge__camera_8h.tex  rcge__camera_8h_source.tex  rcge__datatype_8h.tex  rcge__datatype_8h_source.tex  rcge__element_8h.tex  rcge__element_8h_source.tex  rcge__init_8h.tex  rcge__init_8h_source.tex  rcge__io_8h.tex  rcge__io_8h_source.tex  rcge__mesh_8h.tex  rcge__mesh_8h_source.tex  rcge__shader_8h.tex  rcge__shader_8h_source.tex  rcge__singlemesh__element_8h.tex  rcge__singlemesh__element_8h_source.tex  rcge__texture_8h.tex  rcge__texture_8h_source.tex  rcge__transform_8h.tex  (+7 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_5.js  groups_7.js  groups_8.js  pages_0.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  pages_8.js  pages_a.js  pages_b.js  pages_c.js  searchdata.js  typedefs_0.js
docs/settings/: Doxyfile
glad/src/: glad.c
libs/glad/include/glad/: glad.h
libs/rcge/: CMakeLists.txt
libs/rcge/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
libs/rcge/include/rcge/: rcge_camera.h  rcge_codes.h  rcge_datatype.h  rcge_default_shaders.h  rcge_element.h  rcge_mesh.h  rcge_shader.h
libs/rcge/src/: rcge_camera.c  rcge_datatype.c  rcge_default_shaders.c  rcge_element.c  rcge_io.c  rcge_master.c  rcge_mesh.c  rcge_shader.c  rcge_singlemesh_element.c  rcge_texture.c  rcge_transform.c
rcge/include/rcge/: rcge.h  rcge_camera.h  rcge_datatype.h  rcge_element.h  rcge_init.h  rcge_io.h  rcge_master.h  rcge_mesh.h  rcge_shader.h  rcge_singlemesh_element.h  rcge_texture.h  rcge_transform.h  rcge_window.h
rcge/include/rcge/internal/: rcge_datatype_internal.h
rcge/src/: rcge_camera.c  rcge_datatype_internal.c  rcge_default_shaders.c  rcge_element.c  rcge_init.c  rcge_io.c  rcge_master.c  rcge_mesh.c  rcge_shader.c  rcge_singlemesh_element.c  rcge_texture.c  rcge_transform.c  rcge_window.c
shaders/: default.frag  default.vert
